--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <h2>Dolphin-anty: Đánh giá & So sánh các Trình duyệt Antidetect Tốt nhất 2025</h2>
             <p>Chúng tôi cung cấp những đánh giá khách quan giúp bạn chọn trình duyệt antidetect phù hợp nhất. Bài viết nổi bật: <a href="/multilogin-review.html">Đánh giá Multilogin</a>.</p>
             <div class="cta-row">
-                <!-- CTA: thay YOUR_AFFILIATE_LINK bằng link affiliate của bạn -->
-                <a class="cta-btn primary" id="affiliateCta" href="#">Nhận Mã Giảm Giá 50% Multilogin</a>
+                <!-- CTA: script.js sẽ gán AFFILIATE_LINK cho các nút có data-affiliate="true" -->
+                <a class="cta-btn primary" id="affiliateCta" data-affiliate="true" href="#">Nhận Mã Giảm Giá 50% Multilogin</a>
                 <a class="cta-btn" href="/multilogin-review.html">Xem Đánh Giá Chi Tiết Multilogin</a>
             </div>
         </section>
