--- a/multilogin-review.html
+++ b/multilogin-review.html
@@ -27,7 +27,7 @@
       <h2>Đánh giá Multilogin: Giải pháp chuyên nghiệp cho quản lý nhiều profile</h2>
       <p class="lead">Multilogin là một trong những nền tảng hàng đầu cho việc quản lý profile trình duyệt và giả lập fingerprint. Bài viết này phân tích chi tiết tính năng, hiệu suất, giao diện, và lý do bạn có thể chọn Multilogin.</p>
       <div class="cta-row">
-        <a class="cta-btn primary" id="affiliateCtaReview" href="#">Nhận Mã Giảm Giá 50% Multilogin</a>
+        <a class="cta-btn primary" id="affiliateCtaReview" data-affiliate="true" href="#">Nhận Mã Giảm Giá 50% Multilogin</a>
         <a class="cta-btn" href="#features">Xem Tính Năng</a>
       </div>
     </article>
